Include GC ratios for analysis

--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -1023,17 +1023,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(PosixPath('/home/jpatterson87/for_classes/gnn_for_diabetes/data/transformed_data_from_vms/with_nodes/HG01046.hard-filtered.sliced.vcf.tsv'), 'Chinese Dai in Xishuangbanna, China'), (PosixPath('/home/jpatterson87/for_classes/gnn_for_diabetes/data/transformed_data_from_vms/with_nodes/HG01047.hard-filtered.sliced.vcf.tsv'), 'Puerto Rican in Puerto Rico'), (PosixPath('/home/jpatterson87/for_classes/gnn_for_diabetes/data/transformed_data_from_vms/with_nodes/HG01048.hard-filtered.sliced.vcf.tsv'), 'Puerto Rican in Puerto Rico'), (PosixPath('/home/jpatterson87/for_classes/gnn_for_diabetes/data/transformed_data_from_vms/with_nodes/HG01049.hard-filtered.sliced.vcf.tsv'), 'Puerto Rican in Puerto Rico'), (PosixPath('/home/jpatterson87/for_classes/gnn_for_diabetes/data/transformed_data_from_vms/with_nodes/HG01050.hard-filtered.sliced.vcf.tsv'), 'Puerto Rican in Puerto Rico')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://stackoverflow.com/questions/23782215/iterate-through-files\n",
     "# Get a list of tuples containing files and their labels.\n",
@@ -1055,6 +1047,163 @@
     "    )\n",
     "    if len(label) > 0:\n",
     "        files_and_labels.append((tsv, label[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape: (1134, 16)\n",
+      "┌─────────┬────────────┬────────────┬────────────┬─────┬────────────┬────────────┬────────────┬────────────┐\n",
+      "│ node_id ┆ min_start_ ┆ first_quar ┆ second_qua ┆ ... ┆ first_quar ┆ second_qua ┆ third_quar ┆ max_ALT_GC │\n",
+      "│ ---     ┆ pos        ┆ tile_start ┆ rtile_star ┆     ┆ tile_ALT_G ┆ rtile_ALT_ ┆ tile_ALT_G ┆ _ratio     │\n",
+      "│ i64     ┆ ---        ┆ _pos       ┆ t_pos      ┆     ┆ C_ratio    ┆ GC_ratio   ┆ C_ratio    ┆ ---        │\n",
+      "│         ┆ f64        ┆ ---        ┆ ---        ┆     ┆ ---        ┆ ---        ┆ ---        ┆ f64        │\n",
+      "│         ┆            ┆ f64        ┆ f64        ┆     ┆ f64        ┆ f64        ┆ f64        ┆            │\n",
+      "╞═════════╪════════════╪════════════╪════════════╪═════╪════════════╪════════════╪════════════╪════════════╡\n",
+      "│ 576     ┆ 1.8556522e ┆ 1.8557225e ┆ 1.8557279e ┆ ... ┆ 0.0        ┆ 0.5        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆ 7          ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 1120    ┆ 9.143002e7 ┆ 9.1433445e ┆ 9.1438664e ┆ ... ┆ 0.0        ┆ 0.0        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆            ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 1024    ┆ 8.9998845e ┆ 9.0006832e ┆ 9.0027774e ┆ ... ┆ 0.0        ┆ 1.0        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆ 7          ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 1056    ┆ 7.638111e7 ┆ 7.6386988e ┆ 7.6390839e ┆ ... ┆ 0.0        ┆ 0.5        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆            ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ ...     ┆ ...        ┆ ...        ┆ ...        ┆ ... ┆ ...        ┆ ...        ┆ ...        ┆ ...        │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 961     ┆ 4.4607855e ┆ 4.4611072e ┆ 4.4654987e ┆ ... ┆ 0.0        ┆ 0.5        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆ 7          ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 289     ┆ 4.538928e7 ┆ 4.5400014e ┆ 4.5408033e ┆ ... ┆ 0.0        ┆ 0.333333   ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆            ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 1025    ┆ 9.3854009e ┆ 9.3883205e ┆ 9.3891143e ┆ ... ┆ 0.0        ┆ 1.0        ┆ 1.0        ┆ 1.0        │\n",
+      "│         ┆ 7          ┆ 7          ┆ 7          ┆     ┆            ┆            ┆            ┆            │\n",
+      "├╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤\n",
+      "│ 161     ┆ 6.477985e6 ┆ 6.47948e6  ┆ 6.484294e6 ┆ ... ┆ 0.0        ┆ 1.0        ┆ 1.0        ┆ 1.0        │\n",
+      "└─────────┴────────────┴────────────┴────────────┴─────┴────────────┴────────────┴────────────┴────────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file, label in files_and_labels:\n",
+    "    if label == \"Bengali in Bangladesh\":\n",
+    "        scanned_file = pl.scan_csv(file=file,\n",
+    "                    has_header=True,\n",
+    "                    sep=\"\\t\")\n",
+    "\n",
+    "        scanned_file_with_counts = (scanned_file\n",
+    "            .with_columns([\n",
+    "                pl.col(\"REF\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"A\")\n",
+    "                    .alias(\"REF_A_count\"),\n",
+    "\n",
+    "                pl.col(\"REF\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"C\")\n",
+    "                    .alias(\"REF_C_count\"),\n",
+    "\n",
+    "                pl.col(\"REF\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"G\")\n",
+    "                    .alias(\"REF_G_count\"),\n",
+    "\n",
+    "                pl.col(\"REF\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"T\")\n",
+    "                    .alias(\"REF_T_count\"),\n",
+    "          \n",
+    "                pl.col(\"ALT\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"A\")\n",
+    "                    .alias(\"ALT_A_count\"),\n",
+    "\n",
+    "                pl.col(\"ALT\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"C\")\n",
+    "                    .alias(\"ALT_C_count\"),\n",
+    "\n",
+    "                pl.col(\"ALT\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"G\")\n",
+    "                    .alias(\"ALT_G_count\"),\n",
+    "\n",
+    "                pl.col(\"ALT\")\n",
+    "                    .str.to_uppercase()\n",
+    "                    .str.count_match(\"T\")\n",
+    "                    .alias(\"ALT_T_count\")\n",
+    "            ])\n",
+    "\n",
+    "        )\n",
+    "\n",
+    "        scanned_file_with_ratios = (scanned_file_with_counts\n",
+    "            .with_columns([\n",
+    "                (\n",
+    "                    (pl.col(\"REF_G_count\") + pl.col(\"REF_C_count\")) /\n",
+    "                    (pl.col(\"REF_G_count\") + pl.col(\"REF_C_count\") + pl.col(\"REF_A_count\") + pl.col(\"REF_T_count\"))\n",
+    "                ).alias(\"REF_GC_ratio\"),\n",
+    "\n",
+    "                (\n",
+    "                    (pl.col(\"ALT_G_count\") + pl.col(\"ALT_C_count\")) /\n",
+    "                    (pl.col(\"ALT_G_count\") + pl.col(\"ALT_C_count\") + pl.col(\"ALT_A_count\") + pl.col(\"ALT_T_count\"))\n",
+    "                ).alias(\"ALT_GC_ratio\")\n",
+    "            ])                          \n",
+    "        )\n",
+    "        \n",
+    "        node_summary = (scanned_file_with_ratios\n",
+    "            .groupby(by=\"node_id\")\n",
+    "            .agg([\n",
+    "                pl.col(\"POS\").quantile(quantile=0).alias(\"min_start_pos\"),\n",
+    "                pl.col(\"POS\").quantile(quantile=0.25).alias(\"first_quartile_start_pos\"),\n",
+    "                pl.col(\"POS\").quantile(quantile=0.5).alias(\"second_quartile_start_pos\"),\n",
+    "                pl.col(\"POS\").quantile(quantile=0.75).alias(\"third_quartile_start_pos\"),\n",
+    "                pl.col(\"POS\").quantile(quantile=1).alias(\"max_start_pos\"),\n",
+    "\n",
+    "                pl.col(\"REF_GC_ratio\").quantile(quantile=0).alias(\"min_REF_GC_ratio\"),\n",
+    "                pl.col(\"REF_GC_ratio\").quantile(quantile=0.25).alias(\"first_quartile_REF_GC_ratio\"),\n",
+    "                pl.col(\"REF_GC_ratio\").quantile(quantile=0.5).alias(\"second_quartile_REF_GC_ratio\"),\n",
+    "                pl.col(\"REF_GC_ratio\").quantile(quantile=0.75).alias(\"third_quartile_REF_GC_ratio\"),\n",
+    "                pl.col(\"REF_GC_ratio\").quantile(quantile=1).alias(\"max_REF_GC_ratio\"),\n",
+    "\n",
+    "                pl.col(\"ALT_GC_ratio\").quantile(quantile=0).alias(\"min_ALT_GC_ratio\"),\n",
+    "                pl.col(\"ALT_GC_ratio\").quantile(quantile=0.25).alias(\"first_quartile_ALT_GC_ratio\"),\n",
+    "                pl.col(\"ALT_GC_ratio\").quantile(quantile=0.5).alias(\"second_quartile_ALT_GC_ratio\"),\n",
+    "                pl.col(\"ALT_GC_ratio\").quantile(quantile=0.75).alias(\"third_quartile_ALT_GC_ratio\"),\n",
+    "                pl.col(\"ALT_GC_ratio\").quantile(quantile=1).alias(\"max_ALT_GC_ratio\"),\n",
+    "            ])\n",
+    "            .select([\n",
+    "                \"node_id\", \n",
+    "                \"min_start_pos\",\n",
+    "                \"first_quartile_start_pos\",\n",
+    "                \"second_quartile_start_pos\",\n",
+    "                \"third_quartile_start_pos\",\n",
+    "                \"max_start_pos\",\n",
+    "                \"min_REF_GC_ratio\",\n",
+    "                \"first_quartile_REF_GC_ratio\",\n",
+    "                \"second_quartile_REF_GC_ratio\", \n",
+    "                \"third_quartile_REF_GC_ratio\",\n",
+    "                \"max_REF_GC_ratio\",\n",
+    "                \"min_ALT_GC_ratio\",\n",
+    "                \"first_quartile_ALT_GC_ratio\",\n",
+    "                \"second_quartile_ALT_GC_ratio\",\n",
+    "                \"third_quartile_ALT_GC_ratio\",\n",
+    "                \"max_ALT_GC_ratio\"\n",
+    "            ])\n",
+    "            .collect()\n",
+    "        )\n",
+    "       \n",
+    "        print(node_summary)\n",
+    "        break"
    ]
   }
  ],
